Fixed search bar. Attempting to finish header and then create it as a file. Still need to debug collapsing navbar.

--- a/public/css/comeTogether.css
+++ b/public/css/comeTogether.css
@@ -43,3 +43,12 @@
      width: %50;
      
 }
+
+#mySearchBar {
+     display: block;
+     margin-left: 350px;
+     margin-right: 350px; 
+     min-width: 300px;
+
+     /*margin-right: 200px auto;*/
+}
